# EX4

./: AStar.h  BFS.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.h  DFS.h  DataBase.cpp  DataBase.h  FileCacheManager.cpp  FileCacheManager.h  GetSol.h  ISearchable.h  ISearcher.h  LexParser.cpp  LexParser.h  Main.cpp  Main.h  Matrix.cpp  Matrix.h  MatrixFactory.cpp  MatrixFactory.h  MatrixProblem.cpp  MatrixProblem.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Point.h  README.md  Searchable.h  Searcher.cpp  Searcher.h  SearcherSolver.h  Server.h  Solution.cpp  (+8 more)
SearcherAlgo/: BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  DFS.cpp  DFS.h
